--- a/index.html
+++ b/index.html
@@ -365,6 +365,14 @@
             display: flex;
             justify-content: center;
         }
+
+        .about-text span {
+            color: var(--primary-blue);
+        }
+
+        .about-text span span {
+            color: var(--accent-green);
+        }
         
         .pyramid-3d {
             width: 250px;
@@ -686,6 +694,17 @@
             .stat-label {
                 font-size: 0.6rem;
             }
+
+            .container h2 {
+                font-size: 1.5rem;
+            }
+
+            .cta-button-light {
+                width: 60%;
+                height: 40%;
+                font-size: 1.3rem;
+                padding: 10px 0px;
+            }
         }
     </style>
 </head>
@@ -773,7 +792,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>Why Choose Reachiff for Your Meta Advertising?</h2>
+                    <h2>Why Choose <span>Reachi<span>ff</span>.</span> for Your Meta Advertising?</h2>
                     <p>With over 7 years of experience in digital marketing, we've mastered the art of Meta advertising. We understand the algorithms, targeting options, and creative strategies that deliver real business growth.</p>
                     <p>Our data-driven approach ensures that every dollar of your ad spend works harder, reaching the right people at the right time with the right message.</p>
                     <div class="about-stats">
@@ -861,7 +880,7 @@
         <div class="container">
             <h2>Ready to Transform Your Meta Advertising?</h2>
             <p>Schedule a free consultation with our Meta ads specialists and discover how we can help you reach more customers, increase conversions, and maximize your advertising ROI.</p>
-            <a href="#contact" class="cta-button-light">Start Your Free Consultation</a>
+            <a href="#contact" class="cta-button-light">Consult Now</a>
         </div>
     </section>
 
@@ -870,7 +889,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-about">
-                    <a href="#" class="footer-logo">Reachi<span>ff</span></a>
+                    <a href="#" class="footer-logo">Reachi<span>ff</span>.</a>
                     <p>We run effective Meta ads for businesses. Our data-driven approach and creative strategies help businesses reach their target audience and achieve measurable growth.</p>
                 </div>
                 <div class="footer-links">
