--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reachiff | Professional Marketing Solutions</title>
+    <link rel="icon" href="favicon.png" type="image/png">
+    <title>Reachiff</title>
     <meta name="description" content="Reachiff - We run effective Meta ads and digital marketing campaigns to help businesses grow">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1008,3 +1009,4 @@
     </script>
 </body>
 </html>
+
