--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             background-color: var(--white);
             box-shadow: var(--shadow);
             position: fixed;
-            width: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
             top: 0;
             z-index: 1000;
         }
@@ -739,13 +741,14 @@
                     <a href="#contact" class="cta-button">Start Your Campaign</a>
                 </div>
                 <div class="hero-visual">
-                    <div class="cube-3d">
-                        <div class="cube-face front">Reachiff</div>
+                    <div class="img">
+                        <!--<div class="cube-face front">Reachiff</div>
                         <div class="cube-face back">Meta Ads</div>
                         <div class="cube-face right">Growth</div>
                         <div class="cube-face left">ROI</div>
                         <div class="cube-face top">Success</div>
-                        <div class="cube-face bottom">Results</div>
+                        <div class="cube-face bottom">Results</div>-->
+                        <img src="image.jpeg" alt="Description of image" width="400" height="400">
                     </div>
                 </div>
             </div>
@@ -812,11 +815,12 @@
                     </div>
                 </div>
                 <div class="about-visual">
-                    <div class="pyramid-3d">
-                        <div class="pyramid-side front-side"></div>
+                    <div class="pyramid">
+                        <!--<div class="pyramid-side front-side"></div>
                         <div class="pyramid-side right-side"></div>
                         <div class="pyramid-side left-side"></div>
-                        <div class="pyramid-side back-side"></div>
+                        <div class="pyramid-side back-side"></div>-->
+                        <img src="img2.jpeg" alt="Team Work Image" width="500" height="550">
                     </div>
                 </div>
             </div>
@@ -1009,4 +1013,3 @@
     </script>
 </body>
 </html>
-
