--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
             background-color: var(--white);
             box-shadow: var(--shadow);
             position: fixed;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
+            left: 20px;
+            right: 20px;
+            max-width: 1000px;
+            margin: 0 auto;
             top: 0;
             z-index: 1000;
         }
@@ -72,6 +73,11 @@
             text-decoration: none;
             display: flex;
             align-items: center;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
         }
         
         .logo span {
